# icom5007-lab-practice

lab-1/L1/: CMakeLists.txt
lab-1/L1/include/: functions.h
lab-1/L1/src/: functions.c  main.c
lab-1/L1/test/: CMakeCache.txt  Makefile  cmake_install.cmake  cpplint_report.txt  main_test.c  performance_test.sh  style_test.sh  temperature_converter
lab-2/L2/: CMakeLists.txt
lab-2/L2/include/: functions.h
lab-2/L2/src/: functions.c  main.c
lab-2/L2/test/: main_test.c
lab-2/include/: functions.h
lab-2/src/: main.c
lab-2/test/: cpplint_report.txt  performance_test.sh
lab-3/H1/: CMakeLists.txt
lab-3/H1/include/: functions.h
lab-3/H1/src/: main.c
lab-3/H1/test/: cpplint_report.txt  main_test.c  performance_test.sh
lab-3/H2/: CMakeLists.txt
lab-3/H2/include/: functions.h
lab-3/H2/test/: main_test.c  performance_test.sh
lab-3/H3/: CMakeLists.txt
lab-3/H3/include/: functions.h
lab-3/H3/test/: main_test.c  performance_test.sh
